# data-profiler

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  doc-writer.md  test-writer.md
.claude/hooks/: enforce-readme-only.ps1
src/data_profiler/: cli.py  inference.py  profiler.py  quality.py  stats.py
tests/: conftest.py  test_cli.py  test_inference.py  test_profiler.py  test_quality.py  test_stats.py
tests/fixtures/: sample.csv  sample.jsonl
